Fix rotating text on mobile

--- a/css/hero.css
+++ b/css/hero.css
@@ -52,6 +52,32 @@
     margin-top: 12.5vh;
 }
 
+.hero--testimonial .wrapper {
+    position: relative;
+}
+
+.hero--testimonial .hero__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url('https://vhn.anglestudios.dev/resources/img/testimonial-bg.png') no-repeat center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.hero--testimonial .hero__bg:after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: #171d1f;
+    opacity: 0.875;
+}
+
 @media screen and (min-width: 821px) {
     .hero--testimonial:before {
         content: " “ ";
@@ -60,6 +86,7 @@
         left: 6vw;
         font-size: 200px;
         opacity: 0.35;
+        z-index: 1;
     }
 
     .hero--testimonial:after {
@@ -69,6 +96,7 @@
         right: 6vw;
         font-size: 200px;
         opacity: 0.35;
+        z-index: 1;
     }
 }
 
@@ -85,6 +113,7 @@
 }
 
 .hero--supplier {
+    position: relative;
     padding: 10vh 0 7.5vh;
 }
 
@@ -94,20 +123,21 @@
     left: 0;
     width: 100%;
     line-height: 0;
-    transform: rotate(180deg);
 }
 
 .hero__shape--top {
     top: 0;
+    transform: rotate(180deg);
 }
 
 .hero__shape--bottom {
     bottom: 0;
+    transform: rotate(0deg);
 }
 
 .hero__shape__svg {
     display: block;
-    width: calc(120% + 1.3px);
+    width: calc(118% + 1.3px);
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -172,11 +202,6 @@
         font-size: 32px;
         line-height: 1.2;
     }
-}
-
-.hero__heading--main {
-    display: flex;
-    align-items: center;
 }
 
 .hero__description--main {
