--- a/css/rotate-word.css
+++ b/css/rotate-word.css
@@ -1,18 +1,26 @@
 .rotate__word {
+    --word-height: 57px;
     position: relative;
     overflow: hidden;
-    margin-left: 8px;
-    height: 57px;
+    height: var(--word-height);
+    display: inline-block;
+    vertical-align: top;
+}
+
+@media screen and (max-width: 820px) {
+    .rotate__word {
+        --word-height: 45px;
+    }
 }
 
 .rotate__word p {
     display: block;
     position: relative;
     line-height: 1.25;
-    height: 57px;
+    height: var(--word-height);
     animation: animateWords 12.5s ease infinite;
     will-change: filter, transform, blur;
-    width: 141px;
+    width: 130px;
 }
 
 .rotate__word span {
@@ -25,7 +33,7 @@
     0%, 16.5% {
         filter: blur(0);
         transform: translateY(0);
-        width: 141px;
+        width: 130px;
     }
     18.5% {
         filter: blur(1px);
@@ -35,8 +43,8 @@
     }
     20%, 36.5% {
         filter: blur(0);
-        transform: translateY(-57px);
-        width: 137px;
+        transform: translateY(calc(var(--word-height) * -1));
+        width: 100px;
     }
     38.5% {
         filter: blur(1px);
@@ -46,8 +54,8 @@
     }
     40%, 56.5% {
         filter: blur(0);
-        transform: translateY(calc(-57px * 2));
-        width: 106px;
+        transform: translateY(calc((var(--word-height) * -1) * 2));
+        width: 70px;
     }
     58.5% {
         filter: blur(1px);
@@ -57,8 +65,8 @@
     }
     60%, 76.5% {
         filter: blur(0);
-        transform: translateY(calc(-57px * 3));
-        width: 122px;
+        transform: translateY(calc((var(--word-height) * -1) * 3));
+        width: 116px;
     }
     78.5% {
         filter: blur(1px);
@@ -68,8 +76,8 @@
     }
     80%, 96.5% {
         filter: blur(0);
-        transform: translateY(calc(-57px * 4));
-        width: 170px;
+        transform: translateY(calc((var(--word-height) * -1) * 4));
+        width: 163px;
     }
     98.5% {
         filter: blur(1px);
@@ -80,6 +88,77 @@
     100% {
         filter: blur(0);
         transform: translateY(0);
-        width: 141px;
+        width: 130px;
     }
+}
+
+@media screen and (max-width: 820px) {
+    .rotate__word p {
+        width: 104px;
+        animation: animateWordsSmall 12.5s ease infinite;
+    }
+
+    @keyframes animateWordsSmall {
+        0%, 16.5% {
+            filter: blur(0);
+            transform: translateY(0);
+            width: 104px;
+        }
+        18.5% {
+            filter: blur(1px);
+        }
+        19% {
+            filter: blur(0px);
+        }
+        20%, 36.5% {
+            filter: blur(0);
+            transform: translateY(calc(var(--word-height) * -1));
+            width: 81px;
+        }
+        38.5% {
+            filter: blur(1px);
+        }
+        39% {
+            filter: blur(0px);
+        }
+        40%, 56.5% {
+            filter: blur(0);
+            transform: translateY(calc((var(--word-height) * -1) * 2));
+            width: 57px;
+        }
+        58.5% {
+            filter: blur(1px);
+        }
+        59% {
+            filter: blur(0px);
+        }
+        60%, 76.5% {
+            filter: blur(0);
+            transform: translateY(calc((var(--word-height) * -1) * 3));
+            width: 94px;
+        }
+        78.5% {
+            filter: blur(1px);
+        }
+        79% {
+            filter: blur(0px);
+        }
+        80%, 96.5% {
+            filter: blur(0);
+            transform: translateY(calc((var(--word-height) * -1) * 4));
+            width: 133px;
+        }
+        98.5% {
+            filter: blur(1px);
+        }
+        99% {
+            filter: blur(0px);
+        }
+        100% {
+            filter: blur(0);
+            transform: translateY(0);
+            width: 104px;
+        }
+    }
+
 }
